force-app/main/default/objects/E2CP__Canned_Comment__c/E2CP__Canned_Comment__c.object-meta.xml
<CustomObject>
    <label>Canned Response</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Canned Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>