force-app/main/default/objects/E2CP__Canned_Comment__c/fields/E2CP__Active__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines whether this canned response is available to be selected.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>