force-app/main/default/objects/E2CP__Canned_Comment__c/fields/E2CP__Comment__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Comment__c</fullName>
    <inlineHelpText>Maximum of 4000 characters due to SFDC comment field size limitations.  Be sure to leave room for the recipients to be added at the top of the comment if you have that feature enabled.</inlineHelpText>
    <label>Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>