force-app/main/default/objects/E2CP__Canned_Comment__c/fields/E2CP__Includes_Flow__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Includes_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Flow</label>
    <type>Checkbox</type>
</CustomField>