force-app/main/default/objects/E2CP__Canned_Comment__c/fields/E2CP__Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Last_Used_Date__c</fullName>
    <inlineHelpText>The last time this Canned Response was inserted into a comment on the New Comment page.</inlineHelpText>
    <label>Last Used Date</label>
    <type>DateTime</type>
</CustomField>