force-app/main/default/objects/E2CP__Canned_Comment__c/fields/E2CP__Title__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Title__c</fullName>
    <inlineHelpText>Use a descriptive title to help users identify the correct canned response they want to use.</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>