force-app/main/default/objects/E2CP__Canned_Comment__c/fields/E2CP__Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Usage_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total number of times this Canned Response has been inserted into a comment on the New Comment page.</inlineHelpText>
    <label>Usage Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>