force-app/main/default/objects/E2CP__Canned_Comment__c/listViews/E2CP__Active.listView-meta.xml
<ListView>
    <fullName>E2CP__Active</fullName>
    <columns>NAME</columns>
    <columns>E2CP__Title__c</columns>
    <columns>E2CP__Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>E2CP__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>